topconfig explicitly disable LIB80211_DEBUG
added in 6f16bf3bdb94b567e2b6663378efb2dbf40db133

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13222 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -3298,6 +3298,7 @@ CONFIG_WIRELESS_OLD_REGULATORY=y
 CONFIG_WIRELESS_EXT=y
 # CONFIG_WIRELESS_EXT_SYSFS is not set
 CONFIG_LIB80211=m
+# CONFIG_LIB80211_DEBUG is not set
 
 ##
 ## file: net/xfrm/Kconfig
