--- a/linux-kbuild-2.6/debian/rules
+++ b/linux-kbuild-2.6/debian/rules
@@ -24,7 +24,7 @@ TAR_ORIG_NAME = $(SOURCE)_$(VERSION).orig.tar.gz
 TAR_ORIG = $(firstword $(wildcard ../$(TAR_ORIG_NAME)) $(wildcard ../orig/$(TAR_ORIG_NAME)))
 
 orig: $(DIR_ORIG)
-	rsync --delete --exclude debian --exclude src --exclude .svk --exclude .svn --link-dest=$(DIR_ORIG)/ -a $(DIR_ORIG)/ .
+	rsync --delete --link-dest=$(CURDIR)/$(DIR_ORIG)/kbuild/ -a $(DIR_ORIG)/kbuild/ kbuild
 
 $(DIR_ORIG):
 ifeq ($(TAR_ORIG),)
