* scripts/mod/Makefile: Generate modpost.h. * scripts/mod/gendef.py: Extract getopt definitions from upstream tool. * scripts/mod/modpost.c: Use extracted getopt definitions.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13233 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-kbuild-2.6/scripts/mod/Makefile
+++ b/linux-kbuild-2.6/scripts/mod/Makefile
@@ -7,14 +7,21 @@ PROGS = \
 
 OUTDIR = scripts/mod
 
+top_srcdir = ../..
+
+include $(top_srcdir)/Makefile.inc
+
 modpost.real-%:
 	$(MAKE) -f Makefile.real TYPE=$* SOURCEDIR=$(top_srcdir)/kbuild/scripts/mod
 
 %: %.o
 	$(CC) $(CFLAGS) $(LDFLAGS) -o $@ $^
 
-include $(top_srcdir)/Makefile.inc
+modpost.h: $(top_srcdir)/kbuild/scripts/mod/modpost.c
+	./gendef.py $< > $@
+
+modpost.o: modpost.c modpost.h
 
 clean:
-	rm $(PROGS) *.o
+	rm $(PROGS) modpost.h *.o
 
