Makefile, scripts/Makefile, scripts/basic/Makefile, scripts/genksyms/Makefile, scripts/kconfig/Makefile, scripts/mod/Makefile.real: Properly specify top_srcdir.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13234 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-kbuild-2.6/scripts/basic/Makefile
+++ b/linux-kbuild-2.6/scripts/basic/Makefile
@@ -3,6 +3,9 @@ PROGS = \
 	fixdep
 
 OUTDIR = scripts/basic
-VPATH = $(top_srcdir)/kbuild/scripts/basic
+
+top_srcdir = ../..
+
+VPATH = $(top_srcdir)/kbuild/$(OUTDIR)
 
 include $(top_srcdir)/Makefile.inc
