--- a/linux-kbuild-2.6/scripts/mod/Makefile.real
+++ b/linux-kbuild-2.6/scripts/mod/Makefile.real
@@ -1,5 +1,7 @@
 PROGS = modpost.real-$(TYPE)
 
+top_srcdir = ../..
+
 CFLAGS += -I$(top_srcdir)/kbuild/include
 
 include $(top_srcdir)/Makefile.inc
