* Makefile.inc: Add clean rule. * scripts/mod/Makefile: Fix clean rule.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13235 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-kbuild-2.6/Makefile.inc
+++ b/linux-kbuild-2.6/Makefile.inc
@@ -6,18 +6,21 @@ CFLAGS += -Wall -O2
 CXXFLAGS = $(CFLAGS)
 
 all: all-local all-recursive
+clean: clean-local clean-recursive
 install: install-local install-recursive
 
-all-recursive install-recursive:
-	+@target=$(shell echo $@ | sed s/-recursive//); \
-	list='$(SUBDIRS)'; \
+%-recursive:
+	+@list='$(SUBDIRS)'; \
 	for subdir in $$list; do \
-	  echo "Making $$target in $$subdir"; \
-	  $(MAKE) -C $$subdir $$target \
+	  echo "Making $* in $$subdir"; \
+	  $(MAKE) -C $$subdir $* \
 	  || exit 1; \
 	done
 
 all-local: $(PROGS)
+
+clean-local::
+	rm -f $(PROGS) *.o
 
 install-local: install-local-progs install-local-scripts install-local-data
 
