* debian/changelog: Update. * debian/compat: Set to 7. * debian/templates/control.source.in: Update debhelper build-dep.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13244 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-kbuild-2.6/debian/templates/control.source.in
+++ b/linux-kbuild-2.6/debian/templates/control.source.in
@@ -4,4 +4,4 @@ Priority: optional
 Maintainer: Debian Kernel Team <debian-kernel@lists.debian.org>
 Uploaders: Bastian Blank <waldi@debian.org>
 Standards-Version: 3.7.3
-Build-Depends: debhelper (>= 4.1.0), python
+Build-Depends: debhelper (>> 7), python
