Makefile.inc: Don't override previsous definitions.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13245 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-kbuild-2.6/Makefile.inc
+++ b/linux-kbuild-2.6/Makefile.inc
@@ -2,7 +2,7 @@ SHELL = /bin/sh -e
 
 CC = gcc
 CXX = g++
-CFLAGS += -Wall -O2
+CFLAGS ?= -O2 -Wall
 CXXFLAGS = $(CFLAGS)
 
 all: all-local all-recursive
