--- a/linux-2.6/debian/templates/control.source.in
+++ b/linux-2.6/debian/templates/control.source.in
@@ -3,6 +3,6 @@ Priority: optional
 Maintainer: Debian Kernel Team <debian-kernel@lists.debian.org>
 Uploaders: Bastian Blank <waldi@debian.org>, Frederik Schüler <fs@debian.org>, maximilian attems <maks@debian.org>
 Standards-Version: 3.8.0
-Build-Depends: debhelper, module-init-tools, dpkg-dev (>= 1.10.23), sparc-utils [sparc], kernel-package (>= 10.063), python
-Build-Depends-Indep: bzip2, findutils (>= 4.2.12), python-central, xmlto
+Build-Depends: debhelper, module-init-tools, python
+Build-Depends-Indep: bzip2, python-central, xmlto
 XS-Python-Version: current
