--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1833,6 +1833,7 @@ CONFIG_SERIAL_8250_ACCENT=m
 CONFIG_SERIAL_8250_BOCA=m
 CONFIG_SERIAL_8250_HUB6=m
 CONFIG_SERIAL_8250_MCA=m
+CONFIG_SERIAL_MAX3100=m
 
 ##
 ## file: drivers/spi/Kconfig
