topconfig enable modular VIDEO_HDPVR
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13490 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -974,6 +974,11 @@ CONFIG_USB_M5602=m
 CONFIG_USB_STV06XX=m
 
 ##
+## file: drivers/media/video/hdpvr/Kconfig
+##
+CONFIG_VIDEO_HDPVR=m
+
+##
 ## file: drivers/media/video/ivtv/Kconfig
 ##
 CONFIG_VIDEO_IVTV=m
