--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -903,6 +903,12 @@ CONFIG_VIDEO_CPIA2=m
 CONFIG_VIDEO_CX18=m
 
 ##
+## file: drivers/media/video/cx231xx/Kconfig
+##
+CONFIG_VIDEO_CX231XX=m
+CONFIG_VIDEO_CX231XX_DVB=m
+
+##
 ## file: drivers/media/video/cx23885/Kconfig
 ##
 CONFIG_VIDEO_CX23885=m
