topconfig enable modular DRAGONRISE_FF
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13492 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -298,6 +298,7 @@ CONFIG_HID=m
 # CONFIG_HID_DEBUG is not set
 CONFIG_HIDRAW=y
 CONFIG_HID_COMPAT=y
+CONFIG_DRAGONRISE_FF=m
 CONFIG_LOGITECH_FF=y
 CONFIG_LOGIRUMBLEPAD2_FF=y
 CONFIG_PANTHERLORD_FF=y
