--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -618,6 +618,7 @@ CONFIG_LEDS_LP5521=m
 CONFIG_LEDS_PCA955X=m
 CONFIG_LEDS_WM8350=m
 CONFIG_LEDS_DAC124S085=m
+CONFIG_LEDS_BD2802=m
 CONFIG_LEDS_TRIGGERS=y
 CONFIG_LEDS_TRIGGER_TIMER=m
 CONFIG_LEDS_TRIGGER_IDE_DISK=y
