Updating packages section.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13502 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-modules-extra-2.6/debian/templates/control.source.in
+++ b/linux-modules-extra-2.6/debian/templates/control.source.in
@@ -1,5 +1,5 @@
 Source: linux-modules-extra-@major@
-Section: devel
+Section: kernel
 Priority: optional
 Maintainer: Debian Kernel Team <debian-kernel@lists.debian.org>
 Uploaders: Bastian Blank <waldi@debian.org>, Daniel Baumann <daniel@debian.org>
