Updating packages section.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13504 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-modules-nonfree-2.6/debian/templates/control.source.in
+++ b/linux-modules-nonfree-2.6/debian/templates/control.source.in
@@ -1,5 +1,5 @@
 Source: linux-modules-nonfree-@major@
-Section: non-free/devel
+Section: non-free/kernel
 Priority: optional
 Maintainer: Debian Kernel Team <debian-kernel@lists.debian.org>
 Uploaders: Daniel Baumann <daniel@debian.org>
