--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1227,6 +1227,7 @@ CONFIG_MTD_UBI_BEB_RESERVE=1
 ## file: drivers/net/Kconfig
 ##
 CONFIG_NETDEVICES=y
+CONFIG_COMPAT_NET_DEV_OPS=y
 CONFIG_IFB=m
 CONFIG_BONDING=m
 CONFIG_MACVLAN=m
