--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1651,6 +1651,7 @@ CONFIG_CHARGER_PCF50633=m
 ##
 CONFIG_REGULATOR=y
 # CONFIG_REGULATOR_DEBUG is not set
+CONFIG_REGULATOR_FIXED_VOLTAGE=m
 # CONFIG_REGULATOR_VIRTUAL_CONSUMER is not set
 CONFIG_REGULATOR_BQ24022=m
 CONFIG_REGULATOR_WM8350=m
