topconfig set modular VIDEO_CX231XX_ALSA
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13549 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -912,6 +912,7 @@ CONFIG_VIDEO_CX18=m
 ##
 CONFIG_VIDEO_CX231XX=m
 CONFIG_VIDEO_CX231XX_DVB=m
+CONFIG_VIDEO_CX231XX_ALSA=m
 
 ##
 ## file: drivers/media/video/cx23885/Kconfig
