topconfig disable FB_BROADSHEET for now
defaults to no, disabled in fedora,
can be enabled on request..

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13550 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2186,6 +2186,7 @@ CONFIG_FB_PM3=m
 # CONFIG_FB_TMIO is not set
 CONFIG_FB_SM501=m
 CONFIG_FB_METRONOME=m
+# CONFIG_FB_BROADSHEET is not set
 CONFIG_FB_MB862XX=m
 CONFIG_FB_MB862XX_PCI_GDC=y
 
