topconfig set modular NOP_USB_XCEIV
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13551 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2090,6 +2090,11 @@ CONFIG_USB_SISUSBVGA_CON=y
 CONFIG_USB_MON=y
 
 ##
+## file: drivers/usb/otg/Kconfig
+##
+CONFIG_NOP_USB_XCEIV=m
+
+##
 ## file: drivers/usb/serial/Kconfig
 ##
 CONFIG_USB_SERIAL=m
