--- a/linux-2.6/debian/config/amd64/config
+++ b/linux-2.6/debian/config/amd64/config
@@ -1133,6 +1133,7 @@ CONFIG_SERIAL_JSM=m
 ## file: drivers/staging/comedi/Kconfig
 ##
 CONFIG_COMEDI=m
+# CONFIG_COMEDI_DEBUG is not set
 CONFIG_COMEDI_PCI_DRIVERS=m
 CONFIG_COMEDI_USB_DRIVERS=m
 
