--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1968,6 +1968,13 @@ CONFIG_ET131X=m
 # CONFIG_POCH is not set
 
 ##
+## file: drivers/staging/pohmelfs/Kconfig
+##
+CONFIG_POHMELFS=m
+# CONFIG_POHMELFS_DEBUG is not set
+CONFIG_POHMELFS_CRYPTO=y
+
+##
 ## file: drivers/staging/rt2860/Kconfig
 ##
 CONFIG_RT2860=m
