x86 explicitly disable THINKPAD_ACPI_UNSAFE_LEDS
defaults to no and states
"Never enable this option on a distribution kernel"..

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13554 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/i386/config
+++ b/linux-2.6/debian/config/i386/config
@@ -1242,6 +1242,7 @@ CONFIG_SONYPI_COMPAT=y
 CONFIG_THINKPAD_ACPI=m
 # CONFIG_THINKPAD_ACPI_DEBUGFACILITIES is not set
 # CONFIG_THINKPAD_ACPI_DEBUG is not set
+# CONFIG_THINKPAD_ACPI_UNSAFE_LEDS is not set
 CONFIG_THINKPAD_ACPI_BAY=y
 CONFIG_THINKPAD_ACPI_VIDEO=y
 CONFIG_THINKPAD_ACPI_HOTKEY_POLL=y
