topconfig enable modular FSCACHE and frieds
follow Kconfig recommendation, same config seen in fedora.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13555 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2423,6 +2423,14 @@ CONFIG_FAT_DEFAULT_IOCHARSET="utf8"
 CONFIG_VXFS_FS=m
 
 ##
+## file: fs/fscache/Kconfig
+##
+CONFIG_FSCACHE=m
+CONFIG_FSCACHE_STATS=y
+# CONFIG_FSCACHE_HISTOGRAM is not set
+# CONFIG_FSCACHE_DEBUG is not set
+
+##
 ## file: fs/fuse/Kconfig
 ##
 CONFIG_FUSE_FS=m
