--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2429,6 +2429,9 @@ CONFIG_FSCACHE=m
 CONFIG_FSCACHE_STATS=y
 # CONFIG_FSCACHE_HISTOGRAM is not set
 # CONFIG_FSCACHE_DEBUG is not set
+CONFIG_CACHEFILES=m
+# CONFIG_CACHEFILES_DEBUG is not set
+# CONFIG_CACHEFILES_HISTOGRAM is not set
 
 ##
 ## file: fs/fuse/Kconfig
