topconfig set modular EXOFS
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13557 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2410,6 +2410,12 @@ CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
 
 ##
+## file: fs/exofs/Kconfig
+##
+CONFIG_EXOFS_FS=m
+# CONFIG_EXOFS_DEBUG is not set
+
+##
 ## file: fs/fat/Kconfig
 ##
 CONFIG_MSDOS_FS=m
