topconfig centralize 3Dfx fb options
alpha strangely enabled the accel option that no one else did,
most probably an oversight.
set te new FB_3DFX_I2C support.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13567 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2190,6 +2190,9 @@ CONFIG_FB_ARC=m
 CONFIG_FB_INTEL_I2C=y
 CONFIG_FB_S3=m
 CONFIG_FB_VIA=m
+CONFIG_FB_3DFX=m
+# CONFIG_FB_3DFX_ACCEL is not set
+CONFIG_FB_3DFX_I2C=y
 CONFIG_FB_VT8623=m
 CONFIG_FB_CYBLA=m
 CONFIG_FB_ARK=m
