topconfig disable explicitly FTRACE_STARTUP_TEST
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13569 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2830,6 +2830,7 @@ CONFIG_BOOT_TRACER=y
 # CONFIG_POWER_TRACER is not set
 # CONFIG_STACK_TRACER is not set
 # CONFIG_HW_BRANCH_TRACER is not set
+# CONFIG_FTRACE_STARTUP_TEST is not set
 
 ##
 ## file: lib/Kconfig
