--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -3450,6 +3450,11 @@ CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=1
 # CONFIG_SECURITY_SELINUX_POLICYDB_VERSION_MAX is not set
 
 ##
+## file: security/tomoyo/Kconfig
+##
+# CONFIG_SECURITY_TOMOYO is not set
+
+##
 ## file: sound/Kconfig
 ##
 CONFIG_SOUND=m
