--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -3438,6 +3438,11 @@ CONFIG_SECURITY_FILE_CAPABILITIES=y
 CONFIG_SECURITY_DEFAULT_MMAP_MIN_ADDR=0
 
 ##
+## file: security/integrity/ima/Kconfig
+##
+# CONFIG_IMA is not set
+
+##
 ## file: security/selinux/Kconfig
 ##
 CONFIG_SECURITY_SELINUX=y
