x86_64 enable modular CRYPTO_AES_NI_INTEL
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13572 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/amd64/config
+++ b/linux-2.6/debian/config/amd64/config
@@ -127,6 +127,7 @@ CONFIG_XEN_MAX_DOMAIN_MEMORY=32
 ##
 CONFIG_CRYPTO_CRC32C_INTEL=m
 CONFIG_CRYPTO_AES_X86_64=m
+CONFIG_CRYPTO_AES_NI_INTEL=m
 CONFIG_CRYPTO_SALSA20_X86_64=m
 CONFIG_CRYPTO_TWOFISH_X86_64=m
 
