--- a/linux-2.6/debian/config/amd64/config
+++ b/linux-2.6/debian/config/amd64/config
@@ -347,6 +347,7 @@ CONFIG_EDAC=y
 # CONFIG_EDAC_DEBUG is not set
 CONFIG_EDAC_MM_EDAC=m
 CONFIG_EDAC_AMD76X=m
+CONFIG_EDAC_AMD8131=m
 CONFIG_EDAC_E7XXX=m
 CONFIG_EDAC_E752X=m
 CONFIG_EDAC_I82875P=m
