--- a/linux-2.6/debian/config/amd64/config
+++ b/linux-2.6/debian/config/amd64/config
@@ -60,7 +60,10 @@ CONFIG_HOTPLUG_CPU=y
 # CONFIG_CMDLINE_BOOL is not set
 CONFIG_PCI=y
 CONFIG_PCI_MMCONFIG=y
-# CONFIG_DMAR is not set
+CONFIG_DMAR=y
+# CONFIG_DMAR_DEFAULT_ON is not set
+CONFIG_DMAR_GFX_WA=y
+CONFIG_DMAR_FLOPPY_WA=y
 CONFIG_INTR_REMAP=y
 CONFIG_IA32_EMULATION=y
 CONFIG_IA32_AOUT=y
