--- a/linux-2.6/debian/config/i386/config
+++ b/linux-2.6/debian/config/i386/config
@@ -86,7 +86,10 @@ CONFIG_PCI=y
 CONFIG_PCI_GOANY=y
 ## end choice
 CONFIG_PCI_MMCONFIG=y
-# CONFIG_DMAR is not set
+CONFIG_DMAR=y
+# CONFIG_DMAR_DEFAULT_ON is not set
+CONFIG_DMAR_GFX_WA=y
+CONFIG_DMAR_FLOPPY_WA=y
 CONFIG_ISA=y
 CONFIG_SCx200=m
 CONFIG_SCx200HR_TIMER=m
