--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -1913,6 +1913,11 @@ CONFIG_STAGING=y
 # CONFIG_COMEDI is not set
 
 ##
+## file: drivers/staging/dst/Kconfig
+##
+# CONFIG_DST is not set
+
+##
 ## file: drivers/staging/echo/Kconfig
 ##
 # CONFIG_ECHO is not set
@@ -1939,6 +1944,16 @@ CONFIG_ET131X=m
 # CONFIG_VIDEO_GO7007 is not set
 
 ##
+## file: drivers/staging/heci/Kconfig
+##
+# CONFIG_HECI is not set
+
+##
+## file: drivers/staging/line6/Kconfig
+##
+# CONFIG_LINE6_USB is not set
+
+##
 ## file: drivers/staging/me4000/Kconfig
 ##
 # CONFIG_ME4000 is not set
@@ -1959,9 +1974,19 @@ CONFIG_ET131X=m
 # CONFIG_OTUS is not set
 
 ##
+## file: drivers/staging/p9auth/Kconfig
+##
+# CONFIG_PLAN9AUTH is not set
+
+##
 ## file: drivers/staging/panel/Kconfig
 ##
 # CONFIG_PANEL is not set
+
+##
+## file: drivers/staging/phison/Kconfig
+##
+# CONFIG_IDE_PHISON is not set
 
 ##
 ## file: drivers/staging/poch/Kconfig
@@ -1991,14 +2016,29 @@ CONFIG_RT2870=m
 CONFIG_RTL8187SE=m
 
 ##
+## file: drivers/staging/serqt_usb/Kconfig
+##
+# CONFIG_USB_SERIAL_QUATECH_ESU100 is not set
+
+##
 ## file: drivers/staging/slicoss/Kconfig
 ##
 # CONFIG_SLICOSS is not set
 
 ##
+## file: drivers/staging/stlc45xx/Kconfig
+##
+# CONFIG_STLC45XX is not set
+
+##
 ## file: drivers/staging/sxg/Kconfig
 ##
 # CONFIG_SXG is not set
+
+##
+## file: drivers/staging/uc3222/Kconfig
+##
+# CONFIG_USB_SERIAL_ATEN2011 is not set
 
 ##
 ## file: drivers/staging/usbip/Kconfig
