debian/config: Reorder.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13641 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/alpha/config
+++ b/linux-2.6/debian/config/alpha/config
@@ -233,6 +233,7 @@ CONFIG_SENSORS_LM90=m
 CONFIG_SENSORS_LM92=m
 CONFIG_SENSORS_MAX1619=m
 CONFIG_SENSORS_PC87360=m
+CONFIG_SENSORS_PCF8591=m
 CONFIG_SENSORS_SIS5595=m
 CONFIG_SENSORS_SMSC47M1=m
 CONFIG_SENSORS_SMSC47B397=m
@@ -280,7 +281,6 @@ CONFIG_SCx200_ACB=m
 ## file: drivers/i2c/chips/Kconfig
 ##
 CONFIG_SENSORS_PCF8574=m
-CONFIG_SENSORS_PCF8591=m
 
 ##
 ## file: drivers/ide/Kconfig
@@ -315,7 +315,6 @@ CONFIG_BLK_DEV_SIIMAGE=m
 CONFIG_BLK_DEV_SLC90E66=m
 CONFIG_BLK_DEV_TRM290=m
 CONFIG_BLK_DEV_VIA82CXXX=m
-# CONFIG_IDE_ARM is not set
 CONFIG_BLK_DEV_4DRIVES=y
 CONFIG_BLK_DEV_ALI14XX=m
 CONFIG_BLK_DEV_DTC2278=m
@@ -844,11 +843,6 @@ CONFIG_PCMCIA_WAVELAN=m
 CONFIG_PCMCIA_NETWAVE=m
 CONFIG_WLAN_80211=y
 CONFIG_PCMCIA_RAYCS=m
-CONFIG_HERMES=m
-CONFIG_PLX_HERMES=m
-CONFIG_TMD_HERMES=m
-CONFIG_PCI_HERMES=m
-CONFIG_PCMCIA_HERMES=m
 CONFIG_ATMEL=m
 CONFIG_PCI_ATMEL=m
 CONFIG_PCMCIA_ATMEL=m
@@ -860,6 +854,15 @@ CONFIG_USB_ZD1201=m
 ## file: drivers/net/wireless/ipw2x00/Kconfig
 ##
 # CONFIG_IPW2100 is not set
+
+##
+## file: drivers/net/wireless/orinoco/Kconfig
+##
+CONFIG_HERMES=m
+CONFIG_PLX_HERMES=m
+CONFIG_TMD_HERMES=m
+CONFIG_PCI_HERMES=m
+CONFIG_PCMCIA_HERMES=m
 
 ##
 ## file: drivers/pci/Kconfig
@@ -1024,8 +1027,6 @@ CONFIG_USB_LEGOTOWER=m
 CONFIG_USB_LCD=m
 CONFIG_USB_LED=m
 CONFIG_USB_CYTHERM=m
-CONFIG_USB_PHIDGETKIT=m
-CONFIG_USB_PHIDGETSERVO=m
 CONFIG_USB_IDMOUSE=m
 CONFIG_USB_TEST=m
 
@@ -1091,7 +1092,6 @@ CONFIG_FB_NEOMAGIC=m
 CONFIG_FB_KYRO=m
 CONFIG_FB_VOODOO1=m
 CONFIG_FB_TRIDENT=m
-CONFIG_FB_TRIDENT_ACCEL=y
 CONFIG_FB_VIRTUAL=m
 
 ##
@@ -1123,7 +1123,6 @@ CONFIG_SOFT_WATCHDOG=m
 CONFIG_PCWATCHDOG=m
 CONFIG_MIXCOMWD=m
 CONFIG_WDT=m
-CONFIG_WDT_501=y
 CONFIG_PCIPCWATCHDOG=m
 CONFIG_WDTPCI=m
 CONFIG_WDT_501_PCI=y
@@ -1293,7 +1292,6 @@ CONFIG_SND_ALS100=m
 CONFIG_SND_AZT2320=m
 CONFIG_SND_CMI8330=m
 CONFIG_SND_CS4231=m
-CONFIG_SND_CS4232=m
 CONFIG_SND_CS4236=m
 CONFIG_SND_DT019X=m
 CONFIG_SND_ES968=m
@@ -1397,4 +1395,14 @@ CONFIG_SND_HDA_INTEL=m
 ## file: sound/usb/Kconfig
 ##
 CONFIG_SND_USB_USX2Y=m
+
+##
+## file: unknown
+##
+CONFIG_FB_TRIDENT_ACCEL=y
+# CONFIG_IDE_ARM is not set
+CONFIG_SND_CS4232=m
+CONFIG_USB_PHIDGETKIT=m
+CONFIG_USB_PHIDGETSERVO=m
+CONFIG_WDT_501=y
 
