--- a/linux-2.6/debian/config/amd64/config
+++ b/linux-2.6/debian/config/amd64/config
@@ -11,10 +11,7 @@ CONFIG_64BIT=y
 CONFIG_SPARSE_IRQ=y
 CONFIG_NUMA_MIGRATE_IRQ_DESC=y
 CONFIG_X86_MPPARSE=y
-## choice: Subarchitecture Type
-CONFIG_X86_PC=y
 # CONFIG_X86_VSMP is not set
-## end choice
 CONFIG_PARAVIRT_GUEST=y
 CONFIG_KVM_CLOCK=y
 CONFIG_KVM_GUEST=y
@@ -63,7 +60,6 @@ CONFIG_PCI_MMCONFIG=y
 CONFIG_DMAR=y
 # CONFIG_DMAR_DEFAULT_ON is not set
 CONFIG_DMAR_GFX_WA=y
-CONFIG_DMAR_FLOPPY_WA=y
 CONFIG_INTR_REMAP=y
 CONFIG_IA32_EMULATION=y
 CONFIG_IA32_AOUT=y
@@ -84,7 +80,6 @@ CONFIG_X86_VERBOSE_BOOTUP=y
 # CONFIG_EARLY_PRINTK_DBGP is not set
 # CONFIG_DEBUG_STACKOVERFLOW is not set
 # CONFIG_DEBUG_STACK_USAGE is not set
-# CONFIG_DEBUG_PAGEALLOC is not set
 # CONFIG_DEBUG_PER_CPU_MAPS is not set
 # CONFIG_X86_PTDUMP is not set
 # CONFIG_DEBUG_RODATA is not set
@@ -105,7 +100,6 @@ CONFIG_OPTIMIZE_INLINING=y
 ##
 CONFIG_X86_ACPI_CPUFREQ=m
 CONFIG_X86_POWERNOW_K8=m
-CONFIG_X86_POWERNOW_K8_ACPI=y
 CONFIG_X86_SPEEDSTEP_CENTRINO=m
 # CONFIG_X86_P4_CLOCKMOD is not set
 
@@ -350,8 +344,6 @@ CONFIG_EDAC=y
 # CONFIG_EDAC_DEBUG is not set
 CONFIG_EDAC_MM_EDAC=m
 CONFIG_EDAC_AMD76X=m
-CONFIG_EDAC_AMD8131=m
-CONFIG_EDAC_AMD8111=m
 CONFIG_EDAC_E7XXX=m
 CONFIG_EDAC_E752X=m
 CONFIG_EDAC_I82875P=m
@@ -359,6 +351,8 @@ CONFIG_EDAC_I3000=m
 CONFIG_EDAC_I82860=m
 CONFIG_EDAC_R82600=m
 CONFIG_EDAC_I5000=m
+CONFIG_EDAC_AMD8131=m
+CONFIG_EDAC_AMD8111=m
 
 ##
 ## file: drivers/firmware/Kconfig
@@ -423,6 +417,7 @@ CONFIG_SENSORS_LM90=m
 CONFIG_SENSORS_LM92=m
 CONFIG_SENSORS_MAX1619=m
 CONFIG_SENSORS_PC87360=m
+CONFIG_SENSORS_PCF8591=m
 CONFIG_SENSORS_SIS5595=m
 CONFIG_SENSORS_SMSC47M1=m
 CONFIG_SENSORS_SMSC47B397=m
@@ -470,7 +465,6 @@ CONFIG_SCx200_ACB=m
 ## file: drivers/i2c/chips/Kconfig
 ##
 CONFIG_SENSORS_PCF8574=m
-CONFIG_SENSORS_PCF8591=m
 
 ##
 ## file: drivers/ide/Kconfig
@@ -512,7 +506,6 @@ CONFIG_BLK_DEV_SIS5513=m
 CONFIG_BLK_DEV_SLC90E66=m
 CONFIG_BLK_DEV_TRM290=m
 CONFIG_BLK_DEV_VIA82CXXX=m
-# CONFIG_IDE_ARM is not set
 
 ##
 ## file: drivers/input/Kconfig
@@ -731,7 +724,6 @@ CONFIG_IBM_ASM=m
 CONFIG_PHANTOM=m
 CONFIG_HP_ILO=m
 CONFIG_DELL_LAPTOP=m
-CONFIG_DELL_WMI=m
 
 ##
 ## file: drivers/mmc/Kconfig
@@ -978,11 +970,6 @@ CONFIG_PCMCIA_WAVELAN=m
 CONFIG_PCMCIA_NETWAVE=m
 CONFIG_WLAN_80211=y
 CONFIG_PCMCIA_RAYCS=m
-CONFIG_HERMES=m
-CONFIG_PLX_HERMES=m
-CONFIG_TMD_HERMES=m
-CONFIG_PCI_HERMES=m
-CONFIG_PCMCIA_HERMES=m
 CONFIG_ATMEL=m
 CONFIG_PCI_ATMEL=m
 CONFIG_PCMCIA_ATMEL=m
@@ -994,6 +981,15 @@ CONFIG_USB_ZD1201=m
 ## file: drivers/net/wireless/ipw2x00/Kconfig
 ##
 # CONFIG_IPW2100 is not set
+
+##
+## file: drivers/net/wireless/orinoco/Kconfig
+##
+CONFIG_HERMES=m
+CONFIG_PLX_HERMES=m
+CONFIG_TMD_HERMES=m
+CONFIG_PCI_HERMES=m
+CONFIG_PCMCIA_HERMES=m
 
 ##
 ## file: drivers/pci/Kconfig
@@ -1041,6 +1037,7 @@ CONFIG_TCIC=m
 ##
 CONFIG_X86_PLATFORM_DEVICES=y
 CONFIG_ACER_WMI=m
+CONFIG_DELL_WMI=m
 CONFIG_SONYPI_COMPAT=y
 CONFIG_THINKPAD_ACPI=m
 # CONFIG_THINKPAD_ACPI_DEBUGFACILITIES is not set
@@ -1208,8 +1205,6 @@ CONFIG_USB_LEGOTOWER=m
 CONFIG_USB_LCD=m
 CONFIG_USB_LED=m
 CONFIG_USB_CYTHERM=m
-CONFIG_USB_PHIDGETKIT=m
-CONFIG_USB_PHIDGETSERVO=m
 CONFIG_USB_IDMOUSE=m
 CONFIG_USB_TEST=m
 
@@ -1287,7 +1282,6 @@ CONFIG_FB_NEOMAGIC=m
 CONFIG_FB_KYRO=m
 CONFIG_FB_VOODOO1=m
 CONFIG_FB_TRIDENT=m
-# CONFIG_FB_TRIDENT_ACCEL is not set
 CONFIG_FB_VIRTUAL=m
 CONFIG_XEN_FBDEV_FRONTEND=y
 
@@ -1383,8 +1377,8 @@ CONFIG_EFI_PARTITION=y
 ## file: init/Kconfig
 ##
 ## choice: RCU Implementation
-CONFIG_TREE_RCU=y
 # CONFIG_CLASSIC_RCU is not set
+CONFIG_TREE_RCU=y
 # CONFIG_PREEMPT_RCU is not set
 ## end choice
 CONFIG_RCU_FANOUT=64
@@ -1416,6 +1410,11 @@ CONFIG_FRAME_WARN=2048
 ## file: mm/Kconfig
 ##
 CONFIG_SPARSEMEM_VMEMMAP=y
+
+##
+## file: mm/Kconfig.debug
+##
+# CONFIG_DEBUG_PAGEALLOC is not set
 
 ##
 ## file: net/atm/Kconfig
@@ -1606,4 +1605,14 @@ CONFIG_SND_HDA_INTEL=m
 ## file: sound/usb/Kconfig
 ##
 CONFIG_SND_USB_USX2Y=m
+
+##
+## file: unknown
+##
+# CONFIG_FB_TRIDENT_ACCEL is not set
+# CONFIG_IDE_ARM is not set
+CONFIG_USB_PHIDGETKIT=m
+CONFIG_USB_PHIDGETSERVO=m
+CONFIG_X86_PC=y
+CONFIG_X86_POWERNOW_K8_ACPI=y
 
