--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -3,7 +3,6 @@
 ##
 CONFIG_BLOCK=y
 CONFIG_LBD=y
-CONFIG_BLK_DEV_IO_TRACE=y
 CONFIG_BLK_DEV_BSG=y
 CONFIG_BLK_DEV_INTEGRITY=y
 
@@ -298,7 +297,6 @@ CONFIG_HID_SUPPORT=y
 CONFIG_HID=m
 # CONFIG_HID_DEBUG is not set
 CONFIG_HIDRAW=y
-CONFIG_HID_COMPAT=y
 CONFIG_DRAGONRISE_FF=m
 CONFIG_LOGITECH_FF=y
 CONFIG_LOGIRUMBLEPAD2_FF=y
@@ -637,7 +635,6 @@ CONFIG_MD_RAID0=m
 CONFIG_MD_RAID1=m
 CONFIG_MD_RAID10=m
 CONFIG_MD_RAID456=m
-CONFIG_MD_RAID5_RESHAPE=y
 CONFIG_MD_MULTIPATH=m
 CONFIG_MD_FAULTY=m
 CONFIG_BLK_DEV_DM=m
@@ -833,13 +830,12 @@ CONFIG_VIDEO_CS53L32A=m
 CONFIG_VIDEO_TLV320AIC23B=m
 CONFIG_VIDEO_WM8775=m
 CONFIG_VIDEO_WM8739=m
+CONFIG_VIDEO_SAA6588=m
 CONFIG_VIDEO_BT819=m
 CONFIG_VIDEO_BT856=m
 CONFIG_VIDEO_KS0127=m
 CONFIG_VIDEO_OV7670=m
 CONFIG_VIDEO_SAA7110=m
-CONFIG_VIDEO_SAA7111=m
-CONFIG_VIDEO_SAA7114=m
 CONFIG_VIDEO_SAA711X=m
 CONFIG_VIDEO_TVP5150=m
 CONFIG_VIDEO_VPX3220=m
@@ -851,7 +847,6 @@ CONFIG_VIDEO_ADV7175=m
 CONFIG_VIDEO_UPD64031A=m
 CONFIG_VIDEO_UPD64083=m
 CONFIG_VIDEO_VIVI=m
-CONFIG_VIDEO_SAA6588=m
 CONFIG_VIDEO_PMS=m
 CONFIG_VIDEO_BWQCAM=m
 CONFIG_VIDEO_CQCAM=m
@@ -911,8 +906,8 @@ CONFIG_VIDEO_CX18=m
 ## file: drivers/media/video/cx231xx/Kconfig
 ##
 CONFIG_VIDEO_CX231XX=m
-CONFIG_VIDEO_CX231XX_DVB=m
 CONFIG_VIDEO_CX231XX_ALSA=m
+CONFIG_VIDEO_CX231XX_DVB=m
 
 ##
 ## file: drivers/media/video/cx23885/Kconfig
@@ -1119,10 +1114,10 @@ CONFIG_TIFM_CORE=m
 CONFIG_TIFM_7XX1=m
 CONFIG_ICS932S401=m
 CONFIG_ENCLOSURE_SERVICES=m
-CONFIG_ISL29003=m
 CONFIG_SGI_XP=m
 CONFIG_SGI_GRU=m
 # CONFIG_SGI_GRU_DEBUG is not set
+CONFIG_ISL29003=m
 
 ##
 ## file: drivers/misc/c2port/Kconfig
@@ -1259,7 +1254,6 @@ CONFIG_E1000=m
 CONFIG_E1000E=m
 CONFIG_IP1000=m
 CONFIG_IGB=m
-# CONFIG_IGB_LRO is not set
 CONFIG_IGB_DCA=y
 CONFIG_IGBVF=m
 CONFIG_NS83820=m
@@ -1403,8 +1397,8 @@ CONFIG_SFC_MTD=y
 CONFIG_TR=y
 CONFIG_IBMTR=m
 CONFIG_IBMOL=m
-CONFIG_3C359=m
 CONFIG_IBMLS=m
+CONFIG_3C359=m
 CONFIG_TMS380TR=m
 CONFIG_TMSPCI=m
 CONFIG_SKISA=m
@@ -1477,9 +1471,6 @@ CONFIG_LIBERTAS_THINFIRM=m
 CONFIG_LIBERTAS_THINFIRM_USB=m
 CONFIG_AIRO=m
 CONFIG_AT76C50X_USB=m
-CONFIG_HERMES_CACHE_FW_ON_INIT=y
-CONFIG_NORTEL_HERMES=m
-CONFIG_PCMCIA_SPECTRUM=m
 # CONFIG_PRISM54 is not set
 CONFIG_USB_NET_RNDIS_WLAN=m
 CONFIG_RTL8180=m
@@ -1492,7 +1483,6 @@ CONFIG_MWL8K=m
 ## file: drivers/net/wireless/ar9170/Kconfig
 ##
 CONFIG_AR9170_USB=m
-CONFIG_AR9170_LEDS=y
 
 ##
 ## file: drivers/net/wireless/ath5k/Kconfig
@@ -1558,6 +1548,13 @@ CONFIG_IWL4965=y
 CONFIG_IWL5000=y
 CONFIG_IWL3945=m
 CONFIG_IWL3945_SPECTRUM_MEASUREMENT=y
+
+##
+## file: drivers/net/wireless/orinoco/Kconfig
+##
+CONFIG_HERMES_CACHE_FW_ON_INIT=y
+CONFIG_NORTEL_HERMES=m
+CONFIG_PCMCIA_SPECTRUM=m
 
 ##
 ## file: drivers/net/wireless/p54/Kconfig
@@ -2036,7 +2033,7 @@ CONFIG_RTL8187SE=m
 # CONFIG_SXG is not set
 
 ##
-## file: drivers/staging/uc3222/Kconfig
+## file: drivers/staging/uc2322/Kconfig
 ##
 # CONFIG_USB_SERIAL_ATEN2011 is not set
 
@@ -2117,8 +2114,6 @@ CONFIG_USB_ADUTUX=m
 CONFIG_USB_SEVSEG=m
 CONFIG_USB_BERRY_CHARGE=m
 CONFIG_USB_CYPRESS_CY7C63=m
-CONFIG_USB_PHIDGET=m
-CONFIG_USB_PHIDGETMOTORCONTROL=m
 CONFIG_USB_FTDI_ELAN=m
 CONFIG_USB_APPLEDISPLAY=m
 CONFIG_USB_LD=m
@@ -2155,7 +2150,6 @@ CONFIG_USB_SERIAL_CH341=m
 # CONFIG_USB_SERIAL_WHITEHEAT is not set
 CONFIG_USB_SERIAL_DIGI_ACCELEPORT=m
 CONFIG_USB_SERIAL_CP210X=m
-CONFIG_USB_SERIAL_CP2101=m
 CONFIG_USB_SERIAL_CYPRESS_M8=m
 CONFIG_USB_SERIAL_EMPEG=m
 CONFIG_USB_SERIAL_FTDI_SIO=m
@@ -2235,16 +2229,15 @@ CONFIG_FB_3DFX=m
 # CONFIG_FB_3DFX_ACCEL is not set
 CONFIG_FB_3DFX_I2C=y
 CONFIG_FB_VT8623=m
-CONFIG_FB_CYBLA=m
 CONFIG_FB_ARK=m
 CONFIG_FB_PM3=m
 # CONFIG_FB_CARMINE is not set
 # CONFIG_FB_TMIO is not set
 CONFIG_FB_SM501=m
 CONFIG_FB_METRONOME=m
-# CONFIG_FB_BROADSHEET is not set
 CONFIG_FB_MB862XX=m
 CONFIG_FB_MB862XX_PCI_GDC=y
+# CONFIG_FB_BROADSHEET is not set
 
 ##
 ## file: drivers/video/backlight/Kconfig
@@ -2315,11 +2308,6 @@ CONFIG_SBC_EPX_C3_WATCHDOG=m
 ##
 ## file: fs/Kconfig
 ##
-CONFIG_QUOTA=y
-CONFIG_QUOTA_NETLINK_INTERFACE=y
-CONFIG_PRINT_QUOTA_WARNING=y
-CONFIG_QFMT_V1=m
-CONFIG_QFMT_V2=m
 CONFIG_TMPFS=y
 CONFIG_TMPFS_POSIX_ACL=y
 CONFIG_HUGETLBFS=y
@@ -2385,6 +2373,13 @@ CONFIG_BTRFS_FS=m
 CONFIG_BTRFS_FS_POSIX_ACL=y
 
 ##
+## file: fs/cachefiles/Kconfig
+##
+CONFIG_CACHEFILES=m
+# CONFIG_CACHEFILES_DEBUG is not set
+# CONFIG_CACHEFILES_HISTOGRAM is not set
+
+##
 ## file: fs/cifs/Kconfig
 ##
 CONFIG_CIFS=m
@@ -2394,8 +2389,8 @@ CONFIG_CIFS_UPCALL=y
 CONFIG_CIFS_XATTR=y
 CONFIG_CIFS_POSIX=y
 # CONFIG_CIFS_DEBUG2 is not set
-CONFIG_CIFS_EXPERIMENTAL=y
 CONFIG_CIFS_DFS_UPCALL=y
+CONFIG_CIFS_EXPERIMENTAL=y
 
 ##
 ## file: fs/coda/Kconfig
@@ -2429,6 +2424,12 @@ CONFIG_ECRYPT_FS=m
 CONFIG_EFS_FS=m
 
 ##
+## file: fs/exofs/Kconfig
+##
+CONFIG_EXOFS_FS=m
+# CONFIG_EXOFS_DEBUG is not set
+
+##
 ## file: fs/ext2/Kconfig
 ##
 CONFIG_EXT2_FS=m
@@ -2455,12 +2456,6 @@ CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
 
 ##
-## file: fs/exofs/Kconfig
-##
-CONFIG_EXOFS_FS=m
-# CONFIG_EXOFS_DEBUG is not set
-
-##
 ## file: fs/fat/Kconfig
 ##
 CONFIG_MSDOS_FS=m
@@ -2480,9 +2475,6 @@ CONFIG_FSCACHE=m
 CONFIG_FSCACHE_STATS=y
 # CONFIG_FSCACHE_HISTOGRAM is not set
 # CONFIG_FSCACHE_DEBUG is not set
-CONFIG_CACHEFILES=m
-# CONFIG_CACHEFILES_DEBUG is not set
-# CONFIG_CACHEFILES_HISTOGRAM is not set
 
 ##
 ## file: fs/fuse/Kconfig
@@ -2692,6 +2684,15 @@ CONFIG_PROC_SYSCTL=y
 CONFIG_QNX4FS_FS=m
 
 ##
+## file: fs/quota/Kconfig
+##
+CONFIG_QUOTA=y
+CONFIG_QUOTA_NETLINK_INTERFACE=y
+CONFIG_PRINT_QUOTA_WARNING=y
+CONFIG_QFMT_V1=m
+CONFIG_QFMT_V2=m
+
+##
 ## file: fs/reiserfs/Kconfig
 ##
 CONFIG_REISERFS_FS=m
@@ -2871,6 +2872,7 @@ CONFIG_BOOT_TRACER=y
 # CONFIG_POWER_TRACER is not set
 # CONFIG_STACK_TRACER is not set
 # CONFIG_HW_BRANCH_TRACER is not set
+CONFIG_BLK_DEV_IO_TRACE=y
 # CONFIG_FTRACE_STARTUP_TEST is not set
 
 ##
@@ -2929,7 +2931,6 @@ CONFIG_DEBUG_BUGVERBOSE=y
 # CONFIG_LATENCYTOP is not set
 CONFIG_SYSCTL_SYSCALL_CHECK=y
 # CONFIG_FIREWIRE_OHCI_REMOTE_DMA is not set
-# CONFIG_DYNAMIC_PRINTK_DEBUG is not set
 
 ##
 ## file: lib/Kconfig.kgdb
@@ -3184,11 +3185,11 @@ CONFIG_IP6_NF_MATCH_HL=m
 CONFIG_IP6_NF_MATCH_IPV6HEADER=m
 CONFIG_IP6_NF_MATCH_MH=m
 CONFIG_IP6_NF_MATCH_RT=m
+CONFIG_IP6_NF_TARGET_HL=m
 CONFIG_IP6_NF_TARGET_LOG=m
 CONFIG_IP6_NF_FILTER=m
 CONFIG_IP6_NF_TARGET_REJECT=m
 CONFIG_IP6_NF_MANGLE=m
-CONFIG_IP6_NF_TARGET_HL=m
 CONFIG_IP6_NF_RAW=m
 CONFIG_IP6_NF_SECURITY=m
 
@@ -3253,6 +3254,7 @@ CONFIG_NETFILTER_XT_TARGET_TRACE=m
 CONFIG_NETFILTER_XT_TARGET_SECMARK=m
 CONFIG_NETFILTER_XT_TARGET_TCPMSS=m
 CONFIG_NETFILTER_XT_TARGET_TCPOPTSTRIP=m
+CONFIG_NETFILTER_XT_MATCH_CLUSTER=m
 CONFIG_NETFILTER_XT_MATCH_COMMENT=m
 CONFIG_NETFILTER_XT_MATCH_CONNBYTES=m
 CONFIG_NETFILTER_XT_MATCH_CONNLIMIT=m
@@ -3284,7 +3286,6 @@ CONFIG_NETFILTER_XT_MATCH_STATE=m
 CONFIG_NETFILTER_XT_MATCH_STATISTIC=m
 CONFIG_NETFILTER_XT_MATCH_STRING=m
 CONFIG_NETFILTER_XT_MATCH_TCPMSS=m
-CONFIG_NETFILTER_XT_MATCH_CLUSTER=m
 CONFIG_NETFILTER_XT_MATCH_TIME=m
 CONFIG_NETFILTER_XT_MATCH_U32=m
 
@@ -3410,7 +3411,6 @@ CONFIG_SCTP_HMAC_MD5=y
 ##
 ## file: net/sunrpc/Kconfig
 ##
-# CONFIG_SUNRPC_REGISTER_V4 is not set
 CONFIG_RPCSEC_GSS_KRB5=m
 CONFIG_RPCSEC_GSS_SPKM3=m
 
@@ -3443,7 +3443,6 @@ CONFIG_WIMAX_DEBUG_LEVEL=8
 ##
 CONFIG_CFG80211=m
 # CONFIG_CFG80211_REG_DEBUG is not set
-CONFIG_NL80211=y
 CONFIG_WIRELESS_OLD_REGULATORY=y
 CONFIG_WIRELESS_EXT=y
 # CONFIG_WIRELESS_EXT_SYSFS is not set
@@ -3611,6 +3610,18 @@ CONFIG_INITRAMFS_SOURCE=""
 ##
 ## file: unknown
 ##
+# CONFIG_DYNAMIC_PRINTK_DEBUG is not set
+CONFIG_FB_CYBLA=m
+CONFIG_HID_COMPAT=y
+# CONFIG_IGB_LRO is not set
 # CONFIG_KPROBES is not set
+CONFIG_MD_RAID5_RESHAPE=y
+CONFIG_NL80211=y
 CONFIG_SCHED_OMIT_FRAME_POINTER=y
+# CONFIG_SUNRPC_REGISTER_V4 is not set
+CONFIG_USB_PHIDGET=m
+CONFIG_USB_PHIDGETMOTORCONTROL=m
+CONFIG_USB_SERIAL_CP2101=m
+CONFIG_VIDEO_SAA7111=m
+CONFIG_VIDEO_SAA7114=m
 
