--- a/linux-2.6/debian/config/hppa/config
+++ b/linux-2.6/debian/config/hppa/config
@@ -124,7 +124,6 @@ CONFIG_BLK_DEV_NS87415=m
 # CONFIG_BLK_DEV_SLC90E66 is not set
 # CONFIG_BLK_DEV_TRM290 is not set
 # CONFIG_BLK_DEV_VIA82CXXX is not set
-# CONFIG_IDE_ARM is not set
 
 ##
 ## file: drivers/input/Kconfig
@@ -359,11 +358,6 @@ CONFIG_PCMCIA_WAVELAN=m
 CONFIG_PCMCIA_NETWAVE=m
 CONFIG_WLAN_80211=y
 CONFIG_PCMCIA_RAYCS=m
-CONFIG_HERMES=m
-# CONFIG_PLX_HERMES is not set
-# CONFIG_TMD_HERMES is not set
-# CONFIG_PCI_HERMES is not set
-CONFIG_PCMCIA_HERMES=m
 # CONFIG_ATMEL is not set
 CONFIG_AIRO_CS=m
 CONFIG_PCMCIA_WL3501=m
@@ -373,6 +367,15 @@ CONFIG_PCMCIA_WL3501=m
 ## file: drivers/net/wireless/ipw2x00/Kconfig
 ##
 # CONFIG_IPW2100 is not set
+
+##
+## file: drivers/net/wireless/orinoco/Kconfig
+##
+CONFIG_HERMES=m
+# CONFIG_PLX_HERMES is not set
+# CONFIG_TMD_HERMES is not set
+# CONFIG_PCI_HERMES is not set
+CONFIG_PCMCIA_HERMES=m
 
 ##
 ## file: drivers/parisc/Kconfig
@@ -544,8 +547,6 @@ CONFIG_USB_OHCI_HCD=m
 # CONFIG_USB_LCD is not set
 # CONFIG_USB_LED is not set
 # CONFIG_USB_CYTHERM is not set
-# CONFIG_USB_PHIDGETKIT is not set
-# CONFIG_USB_PHIDGETSERVO is not set
 # CONFIG_USB_IDMOUSE is not set
 
 ##
@@ -758,7 +759,6 @@ CONFIG_SND_DUMMY=m
 # CONFIG_SND_AD1848 is not set
 # CONFIG_SND_CMI8330 is not set
 # CONFIG_SND_CS4231 is not set
-# CONFIG_SND_CS4232 is not set
 # CONFIG_SND_CS4236 is not set
 # CONFIG_SND_ES1688 is not set
 # CONFIG_SND_ES18XX is not set
@@ -829,4 +829,12 @@ CONFIG_SND_HARMONY=m
 ## file: sound/pci/hda/Kconfig
 ##
 # CONFIG_SND_HDA_INTEL is not set
+
+##
+## file: unknown
+##
+# CONFIG_IDE_ARM is not set
+# CONFIG_SND_CS4232 is not set
+# CONFIG_USB_PHIDGETKIT is not set
+# CONFIG_USB_PHIDGETSERVO is not set
 
