--- a/linux-2.6/debian/config/i386/config
+++ b/linux-2.6/debian/config/i386/config
@@ -10,18 +10,13 @@ CONFIG_OPROFILE_IBS=y
 # CONFIG_64BIT is not set
 # CONFIG_SPARSE_IRQ is not set
 CONFIG_X86_MPPARSE=y
-## choice: Subarchitecture Type
-CONFIG_X86_PC=y
+# CONFIG_X86_BIGSMP is not set
 # CONFIG_X86_ELAN is not set
-# CONFIG_X86_VOYAGER is not set
-# CONFIG_X86_GENERICARCH is not set
+# CONFIG_X86_RDC321X is not set
 # CONFIG_X86_NUMAQ is not set
+# CONFIG_X86_VISWS is not set
 # CONFIG_X86_SUMMIT is not set
 # CONFIG_X86_ES7000 is not set
-# CONFIG_X86_BIGSMP is not set
-## end choice
-# CONFIG_X86_VISWS is not set
-# CONFIG_X86_RDC321X is not set
 CONFIG_PARAVIRT_GUEST=y
 CONFIG_VMI=y
 CONFIG_KVM_CLOCK=y
@@ -89,7 +84,6 @@ CONFIG_PCI_MMCONFIG=y
 CONFIG_DMAR=y
 # CONFIG_DMAR_DEFAULT_ON is not set
 CONFIG_DMAR_GFX_WA=y
-CONFIG_DMAR_FLOPPY_WA=y
 CONFIG_ISA=y
 CONFIG_SCx200=m
 CONFIG_SCx200HR_TIMER=m
@@ -131,7 +125,6 @@ CONFIG_X86_VERBOSE_BOOTUP=y
 # CONFIG_EARLY_PRINTK_DBGP is not set
 # CONFIG_DEBUG_STACKOVERFLOW is not set
 # CONFIG_DEBUG_STACK_USAGE is not set
-# CONFIG_DEBUG_PAGEALLOC is not set
 # CONFIG_DEBUG_PER_CPU_MAPS is not set
 # CONFIG_X86_PTDUMP is not set
 # CONFIG_DEBUG_RODATA is not set
@@ -155,7 +148,6 @@ CONFIG_X86_ACPI_CPUFREQ=m
 CONFIG_X86_POWERNOW_K6=m
 CONFIG_X86_POWERNOW_K7=m
 CONFIG_X86_POWERNOW_K8=m
-CONFIG_X86_POWERNOW_K8_ACPI=y
 CONFIG_X86_GX_SUSPMOD=m
 CONFIG_X86_SPEEDSTEP_CENTRINO=m
 CONFIG_X86_SPEEDSTEP_CENTRINO_TABLE=y
@@ -437,8 +429,6 @@ CONFIG_EDAC=y
 # CONFIG_EDAC_DEBUG is not set
 CONFIG_EDAC_MM_EDAC=m
 CONFIG_EDAC_AMD76X=m
-CONFIG_EDAC_AMD8131=m
-CONFIG_EDAC_AMD8111=m
 CONFIG_EDAC_E7XXX=m
 CONFIG_EDAC_E752X=m
 CONFIG_EDAC_I82875P=m
@@ -446,6 +436,8 @@ CONFIG_EDAC_I3000=m
 CONFIG_EDAC_I82860=m
 CONFIG_EDAC_R82600=m
 CONFIG_EDAC_I5000=m
+CONFIG_EDAC_AMD8131=m
+CONFIG_EDAC_AMD8111=m
 
 ##
 ## file: drivers/firmware/Kconfig
@@ -510,6 +502,7 @@ CONFIG_SENSORS_LM90=m
 CONFIG_SENSORS_LM92=m
 CONFIG_SENSORS_MAX1619=m
 CONFIG_SENSORS_PC87360=m
+CONFIG_SENSORS_PCF8591=m
 CONFIG_SENSORS_SIS5595=m
 CONFIG_SENSORS_SMSC47M1=m
 CONFIG_SENSORS_SMSC47B397=m
@@ -559,7 +552,6 @@ CONFIG_SCx200_ACB=m
 ## file: drivers/i2c/chips/Kconfig
 ##
 CONFIG_SENSORS_PCF8574=m
-CONFIG_SENSORS_PCF8591=m
 
 ##
 ## file: drivers/ide/Kconfig
@@ -602,7 +594,6 @@ CONFIG_BLK_DEV_SIS5513=m
 CONFIG_BLK_DEV_SLC90E66=m
 CONFIG_BLK_DEV_TRM290=m
 CONFIG_BLK_DEV_VIA82CXXX=m
-# CONFIG_IDE_ARM is not set
 # CONFIG_BLK_DEV_4DRIVES is not set
 # CONFIG_BLK_DEV_ALI14XX is not set
 # CONFIG_BLK_DEV_DTC2278 is not set
@@ -878,7 +869,6 @@ CONFIG_IBM_ASM=m
 CONFIG_PHANTOM=m
 CONFIG_HP_ILO=m
 CONFIG_DELL_LAPTOP=m
-CONFIG_DELL_WMI=m
 
 ##
 ## file: drivers/mmc/Kconfig
@@ -1174,11 +1164,6 @@ CONFIG_PCMCIA_WAVELAN=m
 CONFIG_PCMCIA_NETWAVE=m
 CONFIG_WLAN_80211=y
 CONFIG_PCMCIA_RAYCS=m
-CONFIG_HERMES=m
-CONFIG_PLX_HERMES=m
-CONFIG_TMD_HERMES=m
-CONFIG_PCI_HERMES=m
-CONFIG_PCMCIA_HERMES=m
 CONFIG_ATMEL=m
 CONFIG_PCI_ATMEL=m
 CONFIG_PCMCIA_ATMEL=m
@@ -1192,6 +1177,15 @@ CONFIG_USB_ZD1201=m
 CONFIG_IPW2100=m
 CONFIG_IPW2100_MONITOR=y
 # CONFIG_IPW2100_DEBUG is not set
+
+##
+## file: drivers/net/wireless/orinoco/Kconfig
+##
+CONFIG_HERMES=m
+CONFIG_PLX_HERMES=m
+CONFIG_TMD_HERMES=m
+CONFIG_PCI_HERMES=m
+CONFIG_PCMCIA_HERMES=m
 
 ##
 ## file: drivers/pci/Kconfig
@@ -1242,6 +1236,7 @@ CONFIG_TCIC=m
 ##
 CONFIG_X86_PLATFORM_DEVICES=y
 CONFIG_ACER_WMI=m
+CONFIG_DELL_WMI=m
 CONFIG_TC1100_WMI=m
 CONFIG_SONYPI_COMPAT=y
 CONFIG_THINKPAD_ACPI=m
@@ -1442,8 +1437,6 @@ CONFIG_USB_LEGOTOWER=m
 CONFIG_USB_LCD=m
 CONFIG_USB_LED=m
 CONFIG_USB_CYTHERM=m
-CONFIG_USB_PHIDGETKIT=m
-CONFIG_USB_PHIDGETSERVO=m
 CONFIG_USB_IDMOUSE=m
 CONFIG_USB_TEST=m
 
@@ -1525,7 +1518,6 @@ CONFIG_FB_NEOMAGIC=m
 CONFIG_FB_KYRO=m
 CONFIG_FB_VOODOO1=m
 CONFIG_FB_TRIDENT=m
-# CONFIG_FB_TRIDENT_ACCEL is not set
 CONFIG_FB_VIRTUAL=m
 
 ##
@@ -1587,7 +1579,6 @@ CONFIG_MACHZ_WDT=m
 CONFIG_PCWATCHDOG=m
 CONFIG_MIXCOMWD=m
 CONFIG_WDT=m
-CONFIG_WDT_501=y
 CONFIG_PCIPCWATCHDOG=m
 CONFIG_WDTPCI=m
 CONFIG_WDT_501_PCI=y
@@ -1661,6 +1652,11 @@ CONFIG_FLATMEM_MANUAL=y
 # CONFIG_DISCONTIGMEM_MANUAL is not set
 # CONFIG_SPARSEMEM_MANUAL is not set
 ## end choice
+
+##
+## file: mm/Kconfig.debug
+##
+# CONFIG_DEBUG_PAGEALLOC is not set
 
 ##
 ## file: net/atm/Kconfig
@@ -1782,7 +1778,6 @@ CONFIG_SND_ALS100=m
 CONFIG_SND_AZT2320=m
 CONFIG_SND_CMI8330=m
 CONFIG_SND_CS4231=m
-CONFIG_SND_CS4232=m
 CONFIG_SND_CS4236=m
 CONFIG_SND_DT019X=m
 CONFIG_SND_ES968=m
@@ -1889,4 +1884,18 @@ CONFIG_SND_HDA_INTEL=m
 ## file: sound/usb/Kconfig
 ##
 CONFIG_SND_USB_USX2Y=m
+
+##
+## file: unknown
+##
+# CONFIG_FB_TRIDENT_ACCEL is not set
+# CONFIG_IDE_ARM is not set
+CONFIG_SND_CS4232=m
+CONFIG_USB_PHIDGETKIT=m
+CONFIG_USB_PHIDGETSERVO=m
+CONFIG_WDT_501=y
+# CONFIG_X86_GENERICARCH is not set
+CONFIG_X86_PC=y
+CONFIG_X86_POWERNOW_K8_ACPI=y
+# CONFIG_X86_VOYAGER is not set
 
