--- a/linux-2.6/debian/config/powerpc/config
+++ b/linux-2.6/debian/config/powerpc/config
@@ -24,8 +24,8 @@ CONFIG_PCI=y
 # CONFIG_FTR_FIXUP_SELFTEST is not set
 # CONFIG_MSI_BITMAP_SELFTEST is not set
 CONFIG_XMON=y
-CONFIG_XMON_DISASSEMBLY=y
 # CONFIG_XMON_DEFAULT is not set
+CONFIG_XMON_DISASSEMBLY=y
 # CONFIG_VIRQ_DEBUG is not set
 # CONFIG_BDI_SWITCH is not set
 CONFIG_BOOTX_TEXT=y
@@ -235,6 +235,7 @@ CONFIG_SENSORS_LM90=m
 CONFIG_SENSORS_LM92=m
 CONFIG_SENSORS_MAX1619=m
 CONFIG_SENSORS_PC87360=m
+CONFIG_SENSORS_PCF8591=m
 CONFIG_SENSORS_SIS5595=m
 CONFIG_SENSORS_SMSC47M1=m
 CONFIG_SENSORS_SMSC47B397=m
@@ -282,7 +283,6 @@ CONFIG_SCx200_ACB=m
 ## file: drivers/i2c/chips/Kconfig
 ##
 CONFIG_SENSORS_PCF8574=m
-CONFIG_SENSORS_PCF8591=m
 
 ##
 ## file: drivers/ide/Kconfig
@@ -320,7 +320,6 @@ CONFIG_BLK_DEV_TRM290=m
 CONFIG_BLK_DEV_VIA82CXXX=m
 CONFIG_BLK_DEV_IDE_PMAC=y
 CONFIG_BLK_DEV_IDE_PMAC_ATA100FIRST=y
-# CONFIG_IDE_ARM is not set
 
 ##
 ## file: drivers/input/Kconfig
@@ -645,12 +644,6 @@ CONFIG_PCMCIA_WAVELAN=m
 CONFIG_PCMCIA_NETWAVE=m
 CONFIG_WLAN_80211=y
 CONFIG_PCMCIA_RAYCS=m
-CONFIG_HERMES=m
-CONFIG_APPLE_AIRPORT=m
-CONFIG_PLX_HERMES=m
-CONFIG_TMD_HERMES=m
-CONFIG_PCI_HERMES=m
-CONFIG_PCMCIA_HERMES=m
 CONFIG_ATMEL=m
 # CONFIG_PCI_ATMEL is not set
 CONFIG_PCMCIA_ATMEL=m
@@ -662,6 +655,16 @@ CONFIG_USB_ZD1201=m
 ## file: drivers/net/wireless/ipw2x00/Kconfig
 ##
 # CONFIG_IPW2100 is not set
+
+##
+## file: drivers/net/wireless/orinoco/Kconfig
+##
+CONFIG_HERMES=m
+CONFIG_APPLE_AIRPORT=m
+CONFIG_PLX_HERMES=m
+CONFIG_TMD_HERMES=m
+CONFIG_PCI_HERMES=m
+CONFIG_PCMCIA_HERMES=m
 
 ##
 ## file: drivers/pci/Kconfig
@@ -684,11 +687,6 @@ CONFIG_YENTA=m
 CONFIG_PD6729=m
 CONFIG_I82092=m
 CONFIG_TCIC=m
-
-##
-## file: drivers/rtc/Kconfig
-##
-CONFIG_RTC_DRV_PPC=y
 
 ##
 ## file: drivers/scsi/Kconfig
@@ -814,8 +812,6 @@ CONFIG_USB_LEGOTOWER=m
 CONFIG_USB_LCD=m
 CONFIG_USB_LED=m
 CONFIG_USB_CYTHERM=m
-CONFIG_USB_PHIDGETKIT=m
-CONFIG_USB_PHIDGETSERVO=m
 CONFIG_USB_IDMOUSE=m
 CONFIG_USB_TEST=m
 
@@ -882,7 +878,6 @@ CONFIG_FB_KYRO=m
 CONFIG_FB_3DFX=y
 CONFIG_FB_VOODOO1=y
 CONFIG_FB_TRIDENT=m
-CONFIG_FB_TRIDENT_ACCEL=y
 CONFIG_FB_IBM_GXT4500=m
 # CONFIG_FB_VIRTUAL is not set
 
@@ -1128,4 +1123,13 @@ CONFIG_SND_POWERMAC_AUTO_DRC=y
 ## file: sound/usb/Kconfig
 ##
 CONFIG_SND_USB_USX2Y=m
+
+##
+## file: unknown
+##
+CONFIG_FB_TRIDENT_ACCEL=y
+# CONFIG_IDE_ARM is not set
+CONFIG_RTC_DRV_PPC=y
+CONFIG_USB_PHIDGETKIT=m
+CONFIG_USB_PHIDGETSERVO=m
 
