--- a/linux-2.6/debian/config/ia64/config
+++ b/linux-2.6/debian/config/ia64/config
@@ -191,6 +191,7 @@ CONFIG_SENSORS_LM90=m
 CONFIG_SENSORS_LM92=m
 CONFIG_SENSORS_MAX1619=m
 CONFIG_SENSORS_PC87360=m
+CONFIG_SENSORS_PCF8591=m
 CONFIG_SENSORS_SIS5595=m
 CONFIG_SENSORS_SMSC47M1=m
 CONFIG_SENSORS_SMSC47B397=m
@@ -237,7 +238,6 @@ CONFIG_SCx200_ACB=m
 ## file: drivers/i2c/chips/Kconfig
 ##
 CONFIG_SENSORS_PCF8574=m
-CONFIG_SENSORS_PCF8591=m
 
 ##
 ## file: drivers/ide/Kconfig
@@ -538,12 +538,6 @@ CONFIG_PCMCIA_WAVELAN=m
 CONFIG_PCMCIA_NETWAVE=m
 CONFIG_WLAN_80211=y
 CONFIG_PCMCIA_RAYCS=m
-CONFIG_HERMES=m
-CONFIG_PLX_HERMES=m
-CONFIG_TMD_HERMES=m
-CONFIG_PCI_HERMES=m
-CONFIG_PCMCIA_HERMES=m
-CONFIG_PCMCIA_SPECTRUM=m
 CONFIG_ATMEL=m
 CONFIG_PCI_ATMEL=m
 CONFIG_PCMCIA_ATMEL=m
@@ -561,6 +555,16 @@ CONFIG_HOSTAP_CS=m
 ##
 CONFIG_IPW2100=m
 CONFIG_IPW2100_MONITOR=y
+
+##
+## file: drivers/net/wireless/orinoco/Kconfig
+##
+CONFIG_HERMES=m
+CONFIG_PLX_HERMES=m
+CONFIG_TMD_HERMES=m
+CONFIG_PCI_HERMES=m
+CONFIG_PCMCIA_HERMES=m
+CONFIG_PCMCIA_SPECTRUM=m
 
 ##
 ## file: drivers/pci/Kconfig
@@ -709,8 +713,6 @@ CONFIG_USB_LEGOTOWER=m
 CONFIG_USB_LCD=m
 CONFIG_USB_LED=m
 CONFIG_USB_CYTHERM=m
-CONFIG_USB_PHIDGETKIT=m
-CONFIG_USB_PHIDGETSERVO=m
 CONFIG_USB_IDMOUSE=m
 CONFIG_USB_TEST=m
 
@@ -783,7 +785,6 @@ CONFIG_FB_NEOMAGIC=m
 CONFIG_FB_KYRO=m
 CONFIG_FB_VOODOO1=m
 CONFIG_FB_TRIDENT=m
-# CONFIG_FB_TRIDENT_ACCEL is not set
 # CONFIG_FB_VIRTUAL is not set
 
 ##
@@ -962,4 +963,11 @@ CONFIG_SND_YMFPCI=m
 ## file: sound/pci/hda/Kconfig
 ##
 CONFIG_SND_HDA_INTEL=m
+
+##
+## file: unknown
+##
+# CONFIG_FB_TRIDENT_ACCEL is not set
+CONFIG_USB_PHIDGETKIT=m
+CONFIG_USB_PHIDGETSERVO=m
 
