* debian/config/amd64/config, debian/config/i386/config:   Remove Xen options. * debian/config/kernelarch-x86/config: Add Xen options.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13655 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -132,6 +132,39 @@ CONFIG_ACPI_HOTPLUG_MEMORY=m
 CONFIG_ACPI_SBS=m
 
 ##
+## file: drivers/block/Kconfig
+##
+CONFIG_XEN_BLKDEV_FRONTEND=m
+
+##
+## file: drivers/char/Kconfig
+##
+CONFIG_HVC_XEN=y
+
+##
+## file: drivers/input/Kconfig
+##
+CONFIG_XEN_KBDDEV_FRONTEND=y
+
+##
+## file: drivers/net/Kconfig
+##
+CONFIG_XEN_NETDEV_FRONTEND=m
+
+##
+## file: drivers/video/Kconfig
+##
+CONFIG_XEN_FBDEV_FRONTEND=y
+
+##
+## file: drivers/xen/Kconfig
+##
+CONFIG_XEN_BALLOON=y
+CONFIG_XEN_SCRUB_PAGES=y
+CONFIG_XENFS=m
+CONFIG_XEN_COMPAT_XENFS=y
+
+##
 ## file: unknown
 ##
 # CONFIG_PARAVIRT_SPINLOCKS is not set
