debian/config/kernelarch-x86/config: Completely disable extended plattform support. We had nothing enabled anyway.
git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13656 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/kernelarch-x86/config
+++ b/linux-2.6/debian/config/kernelarch-x86/config
@@ -10,6 +10,7 @@ CONFIG_OPROFILE_IBS=y
 CONFIG_SPARSE_IRQ=y
 CONFIG_NUMA_MIGRATE_IRQ_DESC=y
 CONFIG_X86_MPPARSE=y
+# CONFIG_X86_EXTENDED_PLATFORM is not set
 CONFIG_SCHED_OMIT_FRAME_POINTER=y
 CONFIG_PARAVIRT_GUEST=y
 CONFIG_KVM_CLOCK=y
