topconfig set KERNEL_GZIP
current default.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13672 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2760,6 +2760,11 @@ CONFIG_XFS_RT=y
 CONFIG_EXPERIMENTAL=y
 CONFIG_LOCALVERSION=""
 # CONFIG_LOCALVERSION_AUTO is not set
+## choice: Kernel compression mode
+CONFIG_KERNEL_GZIP=y
+# CONFIG_KERNEL_BZIP2 is not set
+# CONFIG_KERNEL_LZMA is not set
+## end choice
 CONFIG_SWAP=y
 CONFIG_SYSVIPC=y
 CONFIG_POSIX_MQUEUE=y
