topconfig set STRIP_ASM_SYMS
defaults to no, but seems useful and also seen enabled on fedora.

git-svn-id: svn://svn.debian.org/svn/kernel/dists/trunk@13673 510b9475-24dd-0310-9b6c-e0eefe99d49f

--- a/linux-2.6/debian/config/config
+++ b/linux-2.6/debian/config/config
@@ -2809,6 +2809,7 @@ CONFIG_PID_NS=y
 CONFIG_NET_NS=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
+CONFIG_STRIP_ASM_SYMS=y
 # CONFIG_EMBEDDED is not set
 CONFIG_SYSCTL_SYSCALL=y
 CONFIG_KALLSYMS=y
